# yuzuos

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
apps/desktop/: CMakeLists.txt  main.c
apps/terminal/: CMakeLists.txt
base/etc/: system.ini
docs/: build.md
kernel/: CMakeLists.txt  init.c
kernel/arch/: CMakeLists.txt
kernel/arch/x86/: CMakeLists.txt  linker.ld
kernel/arch/x86/boot/: boot.S  gdt.c  idt.c  idt_flush.S  main.c  multiboot.c  serial.c
kernel/arch/x86/include/kernel/asm/: irq.h  isr.h  itr_handler.h  pic.h
kernel/arch/x86/include/kernel/boot/: gdt.h  idt.h  multiboot.h  serial.h
kernel/arch/x86/kernel/: irq.c  irq_common.S  isr.c  isr_common.S  pic.c
kernel/boot/: boot.S  linker.ld  multiboot.c
kernel/drivers/: ide.c  keyboard.c  mouse.c  pci.c  pit.c  rtc.c  vga.c
kernel/filesystem/: ext2.c  virtual.c
kernel/include/kernel/: init.h
kernel/include/kernel/boot/: multiboot.h
kernel/include/kernel/drivers/: ide.h  pci.h  pit.h  rtc.h  vga.h
kernel/include/kernel/filesystem/: ext2.h  virtual.h
kernel/include/kernel/interrupts/: handler.h  idt.h  irq.h  isr.h  pic.h
kernel/include/kernel/memory/: gdt.h  mmap.h  physical.h  virtual.h
kernel/include/kernel/system/: io.h  limits.h  sys.h  syscall.h
kernel/include/kernel/task/: elf32.h  scheduler.h  tss.h
kernel/include/kernel/utils/: atomic.h  bitmap.h  compiler.h  dlist.h  errno.h  fcntl.h  log.h  math.h  plist.h  stat.h  stdio.h  stdlib.h  string.h  types.h
kernel/include/ukernel/: fcntl.h  limits.h  stat.h  syscall.h
kernel/init/: main.c
kernel/interrupts/: idt.c  idt_flush.S  irq.S  irq.c  isr.S  isr.c  pic.c
kernel/memory/: gdt.c  gdt_flush.S  mmap.c  page_enable.S  physical.c  tbl_flush_entry.S  virtual.c
kernel/system/: sys.c  syscall.c
kernel/task/: elf32.c  sched_jump_usermode.S  sched_return_usermode.S  sched_switch.S  scheduler.c  tss.c  tss_flush.S
kernel/utils/: bitmap.c  dlist.c  log.c  plist.c  stdio.c  stdlib.c  string.c
libs/: CMakeLists.txt
libs/c/: CMakeLists.txt  crti.S  errno.c  fcntl.c  main.c  stdio.c  stdlib.c  string.c  unistd.c
libs/c/include/: ctype.h  errno.h  fcntl.h  limits.h  math.h  stdint.h  stdio.h  stdlib.h  string.h  syscall.h  unistd.h
libs/c/include/sys/: param.h  stat.h
libs/c/sys/: stat.c
libs/core/: CMakeLists.txt  ini.c  log.c
libs/core/include/core/: log.h
libs/utils/: CMakeLists.txt  ini.c  log.c
libs/utils/include/utils/: ini.h  log.h
services/system/: CMakeLists.txt  main.c
services/window/: CMakeLists.txt
tools/: run.sh  setup-filesystem.sh  setup-image.sh  setup-qemu.sh  setup-toolchain.sh
tools/patches/: binutils.patch  gcc.patch
